Update production css

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
 
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="../build.css" rel="stylesheet">
 </head>
 <body>
     <div class="flex mx-20 my-5 bg-slate-300 p-10 rounded-2xl">
