--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -284,7 +284,7 @@
 			</a>
 			<!-- End Card -->
 			<!-- Card -->
-			<a class="block border border-gray-200 rounded-lg hover:shadow-sm focus:outline-none dark:border-neutral-700 mt-5" href="https://soyjdan.es">
+			<a class="block border border-gray-200 rounded-lg hover:shadow-sm focus:outline-none dark:border-neutral-700 mt-5" href="https://github.com/soyJDan/soyJDan">
 				<div class="relative flex items-center overflow-hidden">
 					<img class="w-32 sm:w-48 h-full absolute inset-0 object-cover rounded-s-lg" src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?q=80&w=1955&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="My Portfolio">
 
