--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -142,11 +142,6 @@
                 >
                 <a
                         class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200"
-                        href="#projects"
-                >Projects</a
-                >
-                <a
-                        class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200"
                         href="#skills"
                 >Skills</a
                 >
@@ -258,52 +253,6 @@
         </div>
         <!-- End About -->
 
-        <!-- Projects -->
-        <div class="mt-10 sm:mt-14" id="projects">
-            <h2 class="font-medium text-gray-800 dark:text-neutral-200">
-                Projects
-            </h2>
-
-			<!-- Card -->
-			<a class="block border border-gray-200 rounded-lg hover:shadow-sm focus:outline-none dark:border-neutral-700 mt-5" href="#works">
-				<div class="relative flex items-center overflow-hidden">
-					<img class="w-32 sm:w-48 h-full absolute inset-0 object-cover rounded-s-lg" src="https://plus.unsplash.com/premium_photo-1668392254245-b2207414f10c?q=80&w=2000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Habbia Game">
-
-					<div class="grow p-4 ms-32 sm:ms-48">
-						<div class="min-h-24 flex flex-col justify-center">
-							<h3 class="font-semibold text-sm text-gray-800 dark:text-neutral-300">
-								Habbia
-							</h3>
-							<p class="mt-1 text-sm text-gray-500 dark:text-neutral-500">
-								A private indie project featuring a pixel art social interaction game,
-								fostering real-time connections and creative experiences on a web platform.
-							</p>
-						</div>
-					</div>
-				</div>
-			</a>
-			<!-- End Card -->
-			<!-- Card -->
-			<a class="block border border-gray-200 rounded-lg hover:shadow-sm focus:outline-none dark:border-neutral-700 mt-5" href="https://github.com/soyJDan/soyJDan">
-				<div class="relative flex items-center overflow-hidden">
-					<img class="w-32 sm:w-48 h-full absolute inset-0 object-cover rounded-s-lg" src="https://images.unsplash.com/photo-1507238691740-187a5b1d37b8?q=80&w=1955&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="My Portfolio">
-
-					<div class="grow p-4 ms-32 sm:ms-48">
-						<div class="min-h-24 flex flex-col justify-center">
-							<h3 class="font-semibold text-sm text-gray-800 dark:text-neutral-300">
-								Portfolio
-							</h3>
-							<p class="mt-1 text-sm text-gray-500 dark:text-neutral-500">
-								Showcasing my journey, skills, and achievements through a dynamic and personalized portfolio.
-							</p>
-						</div>
-					</div>
-				</div>
-			</a>
-			<!-- End Card -->
-        </div>
-        <!-- End Projects -->
-
         <!-- Skills -->
         <div class="my-10 sm:my-14" id="skills">
             <h2 class="mb-5 font-medium text-gray-800 dark:text-neutral-200">
@@ -367,15 +316,25 @@
                             >
                                 TypeScript
                             </li>
-                            <li
+				<li
                                     class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
                             >
-                                Postgres SQL
+                                NodeJS
+                            </li>
+				<li
+                                    class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
+                            >
+                                React
+                            </li>
+				<li
+                                    class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
+                            >
+                                Rust
                             </li>
                             <li
                                     class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200"
                             >
-                                Oracle SQL
+                                SQL - PL/SQL
                             </li>
                         </ul>
                     </dd>
